--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <header class="score-time">
-          <h3>View High Scores</h3>
+          <h3 class="view-score">View High Scores</h3>
           <h3 class="timer">Time: 0</h3>
       </header>
       <div>
